--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -954,7 +954,179 @@
                     <p class="achievement-subtitle">Complete Chapter Ø of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="skybound-heart-toggle" data-achievement="skybound-heart" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="skybound-heart-toggle" data-achievement="skybound-heart"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="push-it-to-the-limit">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Push It to the Limit</a>
+                        </h3>
+                        <span class="achievement-percentage">47.9%</span>
+                    </div>
+                    <p class="achievement-subtitle">Raise a character to level 100</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="push-it-to-the-limit-toggle" data-achievement="push-it-to-the-limit"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="dont-think-it-goes-higher-than-that">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Don't Think It Goes Higher Than That</a>
+                        </h3>
+                        <span class="achievement-percentage">46.5%</span>
+                    </div>
+                    <p class="achievement-subtitle">Deal more than 999,999 damage with a chain burst in battle</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="dont-think-it-goes-higher-than-that-toggle"
+                        data-achievement="dont-think-it-goes-higher-than-that" onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="its-all-about-communication">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">It's All About Communication</a>
+                        </h3>
+                        <span class="achievement-percentage">46.2%</span>
+                    </div>
+                    <p class="achievement-subtitle">Use an emote</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="its-all-about-communication-toggle"
+                        data-achievement="its-all-about-communication" onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="wings-of-destruction">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Wings of Destruction</a>
+                        </h3>
+                        <span class="achievement-percentage">42.7%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete the quest "The Final Report"</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="wings-of-destruction-toggle" data-achievement="wings-of-destruction"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="chain-burst-champion">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Chain Burst Champion</a>
+                        </h3>
+                        <span class="achievement-percentage">42.1%</span>
+                    </div>
+                    <p class="achievement-subtitle">Activate chain bursts 100 times in battles (excluding certain
+                        battles)</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="chain-burst-champion-toggle" data-achievement="chain-burst-champion"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="true-potential">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">True Potential</a>
+                        </h3>
+                        <span class="achievement-percentage">40.4%</span>
+                    </div>
+                    <p class="achievement-subtitle">Unlock the power of an Ascension weapon for the first time</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="true-potential-toggle" data-achievement="true-potential"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="making-ends-meet">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Making Ends Meet</a>
+                        </h3>
+                        <span class="achievement-percentage">30.9%</span>
+                    </div>
+                    <p class="achievement-subtitle">Sell 10 sigils</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="making-ends-meet-toggle" data-achievement="making-ends-meet"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="squads-all-here">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Squad's All Here</a>
+                        </h3>
+                        <span class="achievement-percentage">24.0%</span>
+                    </div>
+                    <p class="achievement-subtitle">Unlcok all characters (excluding add-on content)</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="squads-all-here-toggle" data-achievement="squads-all-here"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="primal-beast-punisher">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Primal Beast Punisher</a>
+                        </h3>
+                        <span class="achievement-percentage">21.3%</span>
+                    </div>
+                    <p class="achievement-subtitle">Defeat primal beasts 100 times</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="primal-beast-punisher-toggle" data-achievement="primal-beast-punisher"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="crabs-are-neat">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">Crabs Are Neat</a>
+                        </h3>
+                        <span class="achievement-percentage">13.4%</span>
+                    </div>
+                    <p class="achievement-subtitle">Find 20 wee pincers</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="crabs-are-neat-toggle" data-achievement="crabs-are-neat"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -967,7 +1139,7 @@
                         </h3>
                         <span class="achievement-percentage">percent%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">descriptiondescriptiondescription</p>
                 </div>
                 <label class="toggle-container">
                     <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
