--- a/ds1/landing-page.html
+++ b/ds1/landing-page.html
@@ -182,7 +182,7 @@
     </header>
 
     <div class="breadcrumbs">
-        <a href="../../index.html">Home</a> > Dark Souls: Remastered Guides
+        <a href="../index.html">Home</a> > Dark Souls: Remastered Guides
     </div>
 
     <div class="game-info">
@@ -229,7 +229,7 @@
             </div>
         </div>
     </div>
-    <a href="../landing-page.html" class="back-button">Back to All Guides</a>
+    <a href="../index.html" class="back-button">Back to All Guides</a>
 
     <footer>
         <p><em>Thou who art Undead, art chosen. In thine exodus from the Undead Asylum, maketh pilgrimage to the land of
