--- a/ds1/achievements/covenant-way-of-white/index.html
+++ b/ds1/achievements/covenant-way-of-white/index.html
@@ -263,8 +263,7 @@
                 covenant (alongside Princess's Guard) that does not have a ranking system.</p>
         </div>
 
-
-        <a href="../../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
