--- a/ds1/achievements/reach-lordran/index.html
+++ b/ds1/achievements/reach-lordran/index.html
@@ -231,13 +231,14 @@
                 </li>
                 <li>
                     Return to the Northern Undead Asylum <em>is</em> possible. I don't want to reveal spoilers, but
-                    there will be a link eventually found <a href="../../area-guides/northern-undead-asylum.html">here
+                    there will be a link eventually found <a
+                        href="../../area-guides/01_northern-undead-asylum.html">here
                         </ahref></a>
                 </li>
             </ol>
         </div>
 
-        <a href="../../landing-page.html" class="back-button">Back to All Achievements</a>
+        <a href="../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
