--- a/ds1/achievements/estus-flask/index.html
+++ b/ds1/achievements/estus-flask/index.html
@@ -249,7 +249,7 @@
             </ol>
         </div>
 
-        <a href="../../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
