--- a/ds1/achievements/reach-anor-londo/index.html
+++ b/ds1/achievements/reach-anor-londo/index.html
@@ -262,7 +262,7 @@
             </ol>
         </div>
 
-        <a href="../../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
