Update hyperlinks for chapter achievements

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -415,7 +415,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/chapter1.html">The
+                            <a href="achievements/categories/chapters/chapter1.html">The
                                 Western
                                 Frontier</a>
                         </h3>
@@ -485,7 +485,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Tempest on the Horizon</a>
+                            <a href="achievements/categories/chapters/chapter2.html">Tempest on the Horizon</a>
                         </h3>
                         <span class="achievement-percentage">82.8%</span>
                     </div>
@@ -502,7 +502,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Creation of the Stars</a>
+                            <a href="achievements/categories/chapters/chapter3.html">Creation of the Stars</a>
                         </h3>
                         <span class="achievement-percentage">81.1%</span>
                     </div>
@@ -606,7 +606,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Skies Forever blue</a>
+                            <a href="achievements/categories/chapters/chapter4.html">Skies Forever blue</a>
                         </h3>
                         <span class="achievement-percentage">77.9%</span>
                     </div>
@@ -658,7 +658,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Shadows in the Snowscape</a>
+                            <a href="achievements/categories/chapters/chapter5.html">Shadows in the Snowscape</a>
                         </h3>
                         <span class="achievement-percentage">73.9%</span>
                     </div>
@@ -709,7 +709,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">In Search of Hope</a>
+                            <a href="achievements/categories/chapters/chapter6.html">In Search of Hope</a>
                         </h3>
                         <span class="achievement-percentage">69.4%</span>
                     </div>
@@ -726,7 +726,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Warning Signs</a>
+                            <a href="achievements/categories/chapters/chapter7.html">Warning Signs</a>
                         </h3>
                         <span class="achievement-percentage">67.8%</span>
                     </div>
@@ -760,7 +760,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Relink</a>
+                            <a href="achievements/categories/chapters/chapter8.html">Relink</a>
                         </h3>
                         <span class="achievement-percentage">65.9%</span>
                     </div>
@@ -795,7 +795,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Opposing Wills</a>
+                            <a href="achievements/categories/chapters/chapter9.html">Opposing Wills</a>
                         </h3>
                         <span class="achievement-percentage">63.6%</span>
                     </div>
@@ -812,7 +812,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Id</a>
+                            <a href="achievements/categories/chapters/chapterF.html">Id</a>
                         </h3>
                         <span class="achievement-percentage">62.7%</span>
                     </div>
@@ -947,7 +947,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">Skybound Heart</a>
+                            <a href="achievements/categories/chapters/chapterØ.html">Skybound Heart</a>
                         </h3>
                         <span class="achievement-percentage">49.2%</span>
                     </div>
