Add new link for prologue

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -380,7 +380,7 @@
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">The Forgotten Sky</a>
+                            <a href="achievements/categories/chapters/_prologue.html">The Forgotten Sky</a>
                         </h3>
                         <span class="achievement-percentage">96.2%</span>
                     </div>
