Add image element

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -377,6 +377,9 @@
             <h2 id="sort-text">All Achievements, sorted by playerbase completion</h2>
 
             <div class="achievement-card" data-name="the-forgotten-sky">
+                <div class="achievement-image">
+                    <img src="images/the-forgotten-sky.jpg" alt="The Forgotten Sky">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
