--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -84,6 +84,20 @@
             text-decoration: underline;
         }
 
+        .achievement-image {
+            margin-right: 16px;
+            flex-shrink: 0;
+            display: flex;
+            align-items: center;
+        }
+
+        .achievement-image img {
+            width: 48px;
+            height: 48px;
+            border-radius: 4px;
+            object-fit: cover;
+        }
+
         .achievement-card {
             background-color: var(--card-bg);
             border-radius: 8px;
@@ -92,6 +106,9 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s ease;
             cursor: pointer;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             display: flex;
             justify-content: space-between;
             align-items: center;
