Add image template for some achievements

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -414,6 +414,9 @@
             </div>
 
             <div class="achievement-card" data-name="on-the-road-to-mastery">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -432,6 +435,9 @@
             </div>
 
             <div class="achievement-card" data-name="the-western-frontier">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -451,6 +457,9 @@
             </div>
 
             <div class="achievement-card" data-name="in-perfect-sync">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -468,6 +477,9 @@
             </div>
 
             <div class="achievement-card" data-name="about-to-full-burst">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -485,6 +497,9 @@
             </div>
 
             <div class="achievement-card" data-name="its-called-skill">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -502,6 +517,9 @@
             </div>
 
             <div class="achievement-card" data-name="tempest-on-the-horizon">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -519,6 +537,9 @@
             </div>
 
             <div class="achievement-card" data-name="creation-of-the-stars">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -536,6 +557,9 @@
             </div>
 
             <div class="achievement-card" data-name="i-try-to-help">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -553,6 +577,9 @@
             </div>
 
             <div class="achievement-card" data-name="give-me-something-to-break">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -571,6 +598,9 @@
             </div>
 
             <div class="achievement-card" data-name="no-cap">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -588,6 +618,9 @@
             </div>
 
             <div class="achievement-card" data-name="debuff-deluge">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -606,6 +639,9 @@
             </div>
 
             <div class="achievement-card" data-name="welcome-to-the-crew">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -623,6 +659,9 @@
             </div>
 
             <div class="achievement-card" data-name="skies-forever-blue">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -640,6 +679,9 @@
             </div>
 
             <div class="achievement-card" data-name="no-holding-back">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -658,6 +700,9 @@
             </div>
 
             <div class="achievement-card" data-name="practice-makes-perfect">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -675,6 +720,9 @@
             </div>
 
             <div class="achievement-card" data-name="shadows-in-the-snowscape">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -692,6 +740,9 @@
             </div>
 
             <div class="achievement-card" data-name="makasette">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -709,6 +760,9 @@
             </div>
 
             <div class="achievement-card" data-name="a-fateful-encounter">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -726,6 +780,9 @@
             </div>
 
             <div class="achievement-card" data-name="in-search-of-hope">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -743,6 +800,9 @@
             </div>
 
             <div class="achievement-card" data-name="warning-signs">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -760,6 +820,9 @@
             </div>
 
             <div class="achievement-card" data-name="i-like-it-when-numbers-go-up">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -777,6 +840,9 @@
             </div>
 
             <div class="achievement-card" data-name="relink">
+                <div class="achievement-image">
+                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
