Add image names

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -415,7 +415,8 @@
 
             <div class="achievement-card" data-name="on-the-road-to-mastery">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/on-the-road-to-mastery.jpg" alt="On the Road to
+                                Mastery">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -436,7 +437,9 @@
 
             <div class="achievement-card" data-name="the-western-frontier">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="The
+                                Western
+                                Frontier">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -458,7 +461,7 @@
 
             <div class="achievement-card" data-name="in-perfect-sync">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="In Perfect Sync">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -478,7 +481,7 @@
 
             <div class="achievement-card" data-name="about-to-full-burst">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="About to Full Burst">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -498,7 +501,7 @@
 
             <div class="achievement-card" data-name="its-called-skill">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="It's Called Skill">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -518,7 +521,7 @@
 
             <div class="achievement-card" data-name="tempest-on-the-horizon">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Tempest on the Horizon">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -538,7 +541,7 @@
 
             <div class="achievement-card" data-name="creation-of-the-stars">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Creation of the Stars">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -558,7 +561,7 @@
 
             <div class="achievement-card" data-name="i-try-to-help">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="I Try to Help">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -578,7 +581,7 @@
 
             <div class="achievement-card" data-name="give-me-something-to-break">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Give Me Something to Break">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -599,7 +602,7 @@
 
             <div class="achievement-card" data-name="no-cap">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="No Cap">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -619,7 +622,7 @@
 
             <div class="achievement-card" data-name="debuff-deluge">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Debuff Deluge">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -640,7 +643,7 @@
 
             <div class="achievement-card" data-name="welcome-to-the-crew">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Welcome to the Crew">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -660,7 +663,7 @@
 
             <div class="achievement-card" data-name="skies-forever-blue">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Skies Forever blue">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -680,7 +683,7 @@
 
             <div class="achievement-card" data-name="no-holding-back">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="No Holding Back">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -701,7 +704,7 @@
 
             <div class="achievement-card" data-name="practice-makes-perfect">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Practice Makes Perfect">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -721,7 +724,7 @@
 
             <div class="achievement-card" data-name="shadows-in-the-snowscape">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Shadows in the Snowscape">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -739,9 +742,9 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="makasette">
+            <div class="achievement-card" data-name="makasete">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Leave It to Me">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -753,7 +756,7 @@
                     <p class="achievement-subtitle">Achieve an S++ quest evaluation for the first time</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="makasette-toggle" data-achievement="makasette"
+                    <input type="checkbox" id="makasete-toggle" data-achievement="makasete"
                         onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
@@ -761,7 +764,7 @@
 
             <div class="achievement-card" data-name="a-fateful-encounter">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="A Fateful Encounter">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -781,7 +784,7 @@
 
             <div class="achievement-card" data-name="in-search-of-hope">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="In Search of Hope">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -801,7 +804,7 @@
 
             <div class="achievement-card" data-name="warning-signs">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Warning Signs">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -821,7 +824,7 @@
 
             <div class="achievement-card" data-name="i-like-it-when-numbers-go-up">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="I Like It When Numbers Go Up">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
@@ -841,7 +844,7 @@
 
             <div class="achievement-card" data-name="relink">
                 <div class="achievement-image">
-                    <img src="images/pathpathpath.jpg" alt="imagetitleimagetitle">
+                    <img src="images/pathpathpath.jpg" alt="Relink">
                 </div>
                 <div class="achievement-container">
                     <div class="achievement-header">
